feat: Add GraphQL.Client, add new folders, update DTOs

--- a/AnimeScheduleAPI/AnimeScheduleAPI.csproj
+++ b/AnimeScheduleAPI/AnimeScheduleAPI.csproj
@@ -7,9 +7,28 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="GraphQL.Client" Version="6.0.2" />
+        <PackageReference Include="GraphQL.Client.Abstractions" Version="6.0.2" />
+        <PackageReference Include="GraphQL.Client.Serializer.SystemTextJson" Version="6.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.2"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="Utils\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="Utils\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Remove="Utils\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Utils\**" />
     </ItemGroup>
 
 </Project>
