--- a/AnimeScheduleAPI/AnimeScheduleAPI.csproj
+++ b/AnimeScheduleAPI/AnimeScheduleAPI.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoRegisterInject" Version="1.3.1" />
         <PackageReference Include="GraphQL.Client" Version="6.0.2" />
         <PackageReference Include="GraphQL.Client.Abstractions" Version="6.0.2" />
         <PackageReference Include="GraphQL.Client.Serializer.SystemTextJson" Version="6.0.2" />
