--- a/AnimeScheduleAPI/appsettings.json
+++ b/AnimeScheduleAPI/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AniListGraphQLServerUri": "https://graphql.anilist.co"
 }
